@@ -1,5 +1,9 @@
 2021-03-01  Jay Berkenbilt  <ejb@ql.org>
 
+	* QPDFObjectHandle::ParserCallbacks: add virtual handleWarning
+	method, and provide default (empty) implementation of it and
+	handleEOF().
+
 	* Add QPDF::numWarnings() -- useful to tell whether any warnings
 	were issued by a specific bit of code.
 
